--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -9,3 +9,8 @@
 h1{
     text-align: center;
 }
+
+.noDiscussions{
+    text-align: center;
+    color:darkRed;
+}
